# adapt-ai

./: .env  .eslintrc  .gitattributes  .gitattributes 2  .gitignore  .jshintrc  Dockerfile  Hello.py  LICENSE  LICENSE 2  README.md  __editable__.user_service-0.1.0.pth  alembic.ini  app.py  config  dataset_infos.json  engine.py  food101_dataset.py  get_token.py  hello.py  list_directory.py  main.py  neurotech_model.h5  nomad.code-workspace  optimizeSVG.js  package-lock.json  package.json  pyproject.toml  pyvenv 2.cfg  qodana.sarif.json  readme.md  requirements.txt  routes.py  session 2.py  setup.py  text_cleaning 2.py  text_cleaning.py  wsgi.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: food101_dataset_workflow.yml  google.yml  model_e220_v-4.700.pth.tar  models.yml  python-app.yml  python-package.yml
.github/workflows/.gradient/workflows/: workflow.yam1
Authlib-1.3.0.dist-info/: RECORD
adapt.egg-info/: PKG-INFO 2  SOURCES 3.txt  entry_points.txt  requires.txt
adapt_backend/: main.py  models.py  run 2.py  run.py
alembic/: env.py
blinker-1.7.0.dist-info/: RECORD  RECORD 2
datasets/: __init__.py  food101_dataset.py
datasets/edstats-csv-zip-32-mb-/: EdStatsCountry 2.csv
datasets/finance/: ed_stats_series.csv
datasets/hospitality/: data_cocktails.csv  food101.py  food101_dataset.py
datasets/retail/Amazon/: data.csv  data.xlsx
datasets/retail/Amazon/archive (2)/: amazon_products.csv.REMOVED.git-id
env/: pyvenv.cfg
env/myvenv/: pyvenv 4.cfg
k8s/: deployment.yaml  service.yaml
migrations/: alembic.ini  env.py
mls/: cli 2.py  cli.py  pyproject.toml
mls/aa_genome/: __init__.py  aa_genome_script.py  main.py
mls/aa_genome/genetic_algorithm_module/genetic_algorithm_module.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mls/neurotech_network/: __init__.py  mnist.py  neurotech_network_script.py
mls/spark_engine/: __init__.py  build.gradle  setup.py  spark_engine_script.py
modular_learning_system/: cli.py
modular_learning_system/aa_genome/: __init__.py  aa_genome_script.py  main.py
modular_learning_system/neurotech_network/: __init__.py  main.py  mnist.py  neurotech_network_script.py
modular_learning_system/spark_engine/: __init__.py  setup.py  spark_engine_script.py
myenv/: pyvenv.cfg
src/: __init__.py  base.py  database.py  engine.py  index.js  main.py  response_utils.py  schemas.py  session.py  text_cleaning.py  user_controller 2.py  user_controller.py  user_repository 2.py  user_repository.py  user_service.py
src/adapt_backend/: __init__.py  data_processing.py  database.py  database_models.py  main.py  ml_models.py  models.py  prediction.py  run.py  training.py
src/adapt_ui/src/: App.js
src/adapt_ui/src/components/: DataProcessing.js
src/adapt_ui/src/components/icons/: FavProductCard.js  LogoDark.js  LogoLight.js  MainBgColorDark.js  MainBgColorLight.js  ProductCard.js  index.js
src/adapt_ui/src/components/icons/Button/: ApplyNow.js  Composemessage.js  index.js
src/adapt_ui/src/components/icons/Label/: Completed.js  Friends.js  InTransit.js  OnHold.js  Primary.js  Processing.js  Rejected.js  Social.js  Work.js  index.js
src/adapt_ui/src/components/icons/Navigation/: Sidebar1.js  Sidebar2.js  SidebarItemBlueActive.js  SidebarItemBlueProducts.js  SidebarItemDarkActiveProducts.js  SidebarItemDarkProducts.js  SidebarItemLight.js  SidebarItemLightActive1.js  TopBar2Dark.js  TopBar2Light.js  index.js
src/adapt_ui/src/components/icons/dark_mode/: Dark1.js  Dark10.js  Dark11.js  Dark12.js  Dark13.js  Dark14.js  Dark15.js  Dark16.js  Dark17.js  Dark18.js  Dark19.js  Dark2.js  Dark20.js  Dark22.js  Dark23.js  Dark25.js  Dark26.js  Dark27.js  Dark28.js  Dark29.js  Dark3.js  Dark30.js  Dark31.js  Dark32.js  Dark33.js  Dark34.js  Dark4.js  Dark5.js  Dark6.js  Dark7.js  Dark8.js  Dark9.js  index.js
src/adapt_ui/src/components/icons/icon/: Calendar.js  Calendar1.js  Calendar2.js  Chat.js  Chat1.js  Chat2.js  Contact.js  Contact1.js  Contact2.js  Dashboard.js  Dashboard1.js  Dashboard2.js  Favourites.js  Favourites1.js  (+29 more)
src/adaptai/: __init__.py  main.py  routes.py  schemas.py  session.py  user_controller.py  user_repository.py  user_service.py
src/api/routes/: metrics.ts  routes_aa_genome.py  routes_spark_engine.py
src/app/: routes_aa_genome.py  routes_neurotech_network.py  routes_spark_engine.py
src/com/spark_engine/: MyClass.java
src/components/Dashboard/: index.tsx
src/components/DataInput/: index.tsx
src/components/Directory/: index.tsx
src/components/RealTimeChart/: index.tsx
src/components/RealTimeMetrics/: index.tsx
src/express_servers/: aa_genome_server.js  neurotech_network_server.js  server.js  spark_engine_server.js
src/hooks/: useDashboard.ts  useWebSocket.ts
src/modular_learning_system/: __init__.py  cli.py
src/modular_learning_system/aa_genome/: __init__.py  aa_genome.py  aa_genome_script.py  data_loader.py  evolution.py  fitness_funtion.py  genome_transformations.py  main.py
src/modular_learning_system/neurotech_network/: __init__.py  main.py  mnist.py  neurotech_network.py  neurotech_network_script.py
src/modular_learning_system/spark_engine/: __init__.py  preprocess.py  setup.py  spark_engine.py  spark_engine_script.py  spark_engine_utils.py
src/services/: api.ts  dataCollection.ts  integration.ts  websockets.ts
src/store/: index.ts
src/store/slices/: alertsSlice.ts  dashboardSlice.ts
src/types/: dashboard.ts
src/user_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/webapp/: .env  package-lock.json  package.json  webpack.config.js
src/webapp/public/: index.css  index.html  index.js
src/webapp/src/: server.js
templates/: dashboard.html  users.html
tests/: conftest 2.py  test_aa_genome 2.py  test_aa_genome.py  test_food101 2.py  test_food101.py  test_main 2.py  test_main.py  test_neurotech_network 2.py  test_neurotech_network.py  test_spark_engine 2.py  test_spark_engine 4.py
user_service/: app 2.py  app.py
user_service/myenv/: pyvenv 4.cfg
user_service/user_service.egg-info/: PKG-INFO  SOURCES 5.txt
(+31 files in other folders)
