[tool.poetry]
name = "adaptai"
version = "0.0.1"
description = "A machine learning platform for developing, benchmarking, and solving real-world problems."
authors = ["Derrick Bass <derrick@adaptivedatafusion.com>"]
license = "Apache-2.0"  # Correct SPDX identifier
readme = "README.md"  # Ensure README.md exists in the root directory
homepage = "https://adaptivedatafusion.com"
repository = "https://github.com/adaptivedatafusion/adaptai"

[tool.poetry.dependencies]
python-dotenv = "1.0.1"
python = ">=3.10,<3.13"  # Compatible with most ML/DL frameworks
torch = "^2.0.0"  # Align with stable PyTorch releases
click = "^8.1"  # Specify major version compatibility
uvicorn = "^0.23.0"  # Latest stable Uvicorn release
fastapi = "0.109.1"  # Latest compatible version with Uvicorn
sqlalchemy = "^2.0.20"  # Ensure compatibility with FastAPI and Alembic
pyarrow = "^15.0.1"  # Up-to-date and optimized
numpy = "^1.24.0"  # Compatible with TensorFlow/PyTorch
pandas = "^2.0.3"  # Use version aligned with compatibility constraints
scikit-learn = "^1.3"  # Compatible with Python 3.10+
flask = "^2.3.3"  # Ensure compatibility with Werkzeug
flask-jwt-extended = "^4.4.0"  # Works with Flask updates
alembic = "^1.11.0"  # Use the latest stable Alembic
werkzeug = "3.0.6"  # Align with Flask compatibility
tensorflow = "^2.17.0"  # Compatible with Python 3.10+
requests = "^2.31.0"  # Latest version for HTTP requests
typing-extensions = "^4.7.1"  # Ensures compatibility with Python types
setuptools = "^70.0.0"  # Compatible with Python tools
datasets = "^3.0.0"  # Focused on NLP dataset integration
pyspark = "^3.5.0"  # Compatible with core Python features
flask-sqlalchemy = "^3.1.1"  # Works well with Flask/SQLAlchemy
huggingface-hub = "^0.27.0" # For Ml Models imports
# Removed unnecessary or redundant dependencies:
# Removed keras (use TensorFlow's built-in Keras implementation)
# Removed fetch-data, decisiontreeclassifier, sequential, django-layers-hr (verify utility if required)
celery = "^5.4.0"

[tool.poetry.scripts]
adaptai = "adapt-ai-real.app:create_app"  # Verify app entry point works

[tool.poetry.dev-dependencies]
black = "^23.9.1"  # Code formatter
isort = "^5.12.0"  # Python imports sorter
pre-commit = "^3.3.3"  # Pre-commit hooks for code quality
pytest = "^8.3.3"  # Testing framework

[build-system]
requires = ["poetry-core>=1.6.0"]  # Core requirement for builds
build-backend = "poetry.core.masonry.api"